...
                        <outlet property="dataSource" destination="-1" id="gOH-qe-Ngm"/>
                        <outlet property="delegate" destination="-1" id="Zlb-se-E2t"/>
                    </connections>
                </tableView>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oeA-8N-JDr">
                    <subviews>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type something" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RYa-7S-A1X">
                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="41" id="zw0-lh-Qx0"/>
                            </constraints>
                            <nil key="textColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        </textField>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XcP-eV-C2a">
                            <constraints>
                                <constraint firstAttribute="height" constant="30" id="JI1-bw-mx0"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                            <state key="normal" title="SEND">
                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.79682112068965516" colorSpace="calibratedRGB"/>
                            </state>
                            <connections>
                                <action selector="sendPressed:" destination="-1" eventType="touchUpInside" id="7xw-Mn-76q"/>
                            </connections>
                        </button>
...
